@@ -20,6 +20,7 @@ added:
 changed:
   - improved error handling in rk.JS.header(), error messages are more
     informative now
+  - rk.uniqueIDs() now checks "dialog" and "wizard" sections separately
 
 changes in version 0.07-3 (2015-06-29)
 fixed:
